# bttb-satellite

./: .codespellrc  .gitlab-ci.yml  .markdownlint.yaml  .pre-commit-config.yaml  README.md  REUSE.toml  pyproject.toml  rename-template.py
.github/workflows/: ci.yml
src/BTTB/: BTTB.py  __main__.py
